# calends

./: .gitignore  Cargo.toml  LICENSE  README.md  notes.md  notes.norg  result
.github/workflows/: CI.yml
src/: addition.rs  bound.rs  calendar.rs  event.rs  grain.rs  lib.rs  month_day.rs  parser.rs  recur.rs  relative.rs  shift.rs  util.rs
src/calendar/: calendar.rs  month_day.rs
src/duration/: ;w  format.rs  mod.rs  parse.rs  relative.rs  serde.rs
src/grouping/: search.rs
src/interval/: base.rs  basis.rs  bound.rs  calendar.rs  closed.rs  interval.rs  interval_like.rs  iter.rs  like.rs  marker.rs  mod.rs  naive.rs  open.rs  parse.rs  serde.rs
src/recurrence/: mod.rs  recur.rs  until.rs
src/unit/: convert.rs  domain.rs  mod.rs
src/util/: mod.rs  search.rs  shift.rs  util.rs
