[package]
name = "calends"
version = "0.0.1"
authors = ["Bradford Toney <bradford.toney@gmail.com>"]
edition = "2021"
publish = true 
license = "MIT"
description = "Calendar library for Rust"

[dependencies]
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
fnv = "1.0.7"
rust-lapper = { version = "1", features = ["with_serde"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[lib]
name = "calends"

