[package]
name = "calends"
version = "0.1.2"
authors = ["Bradford Toney <bradford.toney@gmail.com>"]
edition = "2021"
publish = true 
license = "MIT"
description = "Calendar library for Rust"

[dependencies]
base64 = "0.13.0"
chrono = { version = "0.4.19", features = ["serde"] }
modular-bitfield = "0.11.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_derive = { version = "1", default-features = false }
serde_json = { version = "1" }

[lib]
name = "calends"

