[package]
name = "calends"
version = "0.2.0"
authors = ["Bradford Toney <bradford.toney@gmail.com>"]
edition = "2021"
publish = true 
license = "MIT"
description = "Calendar library for Rust"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
modular-bitfield = "0.11.2"
nom = "7.1.1"
serde = { version = "1.0", features = ["derive"] }
tap = "1.0.1"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_derive = { version = "1", default-features = false }
serde_json = { version = "1" }

[lib]
name = "calends"
path = "src/lib.rs"
